# online_market

./: .coveragerc  .dockerignore  .gitignore  MANIFEST.in  Makefile  README.md  app.env  db.json  docker-compose.yml  manage.py  pytest.ini  setup.cfg  setup.py  tox.ini
docker/nginx/: Dockerfile  default.crt  default.key  nginx.conf
docker/online_market/: Dockerfile
docker/online_market/files/: gunicorn.conf
online_market/: __init__.py  apps.py  context_processors.py  middleware.py  navigation.py  settings.py  urls.py  wsgi.py
online_market/carts/: __init__.py  apps.py  urls.py  views.py
online_market/carts/templates/: cart.html
online_market/orders/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
online_market/orders/migrations/: 0001_initial.py  0002_auto_20200629_1415.py  0003_remove_orderproduct_count.py  0004_orderproduct_count.py  0005_auto_20200629_1425.py
online_market/orders/templates/: make_order.html
online_market/products/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
online_market/products/migrations/: 0001_initial.py  0002_auto_20200629_1349.py  0003_auto_20200629_2302.py
online_market/products/templates/: catalog.html
online_market/static/css/: about.css  delivery.css  index.css
online_market/templates/: about.html  delivery.html  index.html
online_market/templates/contrib/: base.html  footer.html  header.html  nav-item.html  sidebar.html
online_market/templatetags/: header.py  sidebar.py
online_market/users/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+22 files in other folders)
