[metadata]
name = online_market
# version = < see setup.py >
description = Test service for online shopping
long_description = file: README.md
url = https://github.com/gokadi/online_market
author = gokadi
author_email = gokadi@yandex.ru
license = Other/Proprietary License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7


[options]
python_requires = >=3.7
packages = find:
include_package_data = True

install_requires =
    django~=2.2.12
    django-cleanup~=5.0
    django-environ~=0.4
    django-phonenumber-field[phonenumbers]~=4.0
    Pillow~=7.1
    psycopg2~=2.8
    requests~=2.24

[options.packages.find]
exclude =
    tests

[options.extras_require]
develop =
    tox
testing =
    mixer
    mypy
    pylama
    pytest
    #: a new test reordering in 3.9 version breaks migrations test
    #: pytest-django~=3.8.0
    pytest-mock
    pytest-cov
    safety
dist =
    gunicorn
    gevent

[pylama]
skip=*/migrations/*
